_archived/nicu-calculations/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: nicu-calculations
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: nicu-calculations
        image: laylark/nicu-calculations-app:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "20Mi"
            cpu: "10m"
          limits:
            memory: "100Mi"
            cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: nicu-calculations
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: app
